--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,4 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Trunk Check
-        uses: trunk-io/trunk-action@v0.4.0-beta
+        uses: trunk-io/trunk-action@v1.0.3
