--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -30,6 +30,6 @@ jobs:
         uses: MishaKav/pytest-coverage-comment@main
         with:
           #github-token: ${{ secrets.CI_GITHUB_TOKEN }}
-          report-only-changed-files: true
+          report-only-changed-files: false
           pytest-coverage-path: ./pytest-coverage.txt
           junitxml-path: ./pytest.xml
