--- a/.github/workflows/trunk.yml
+++ b/.github/workflows/trunk.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: lint-check-by-trunk
 
 # Controls when the workflow will run
 on:
