--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -29,6 +29,6 @@ jobs:
       - name: Pytest coverage comment
         uses: MishaKav/pytest-coverage-comment@main
         with:
-          report-only-changed-files: true
+          report-only-changed-files: false
           pytest-coverage-path: ./pytest-coverage.txt
           junitxml-path: ./pytest.xml
