Run when appropiate
Run when  a pull request is updated and when it is opened

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -4,7 +4,8 @@ name: run-tests-on-pull-request
 on:
   pull_request:
     branches:
-      - '*'
+      - 'main'
+    types: [synchronize, opened]
 jobs:
   build:
     runs-on: ubuntu-latest
