--- a/.github/workflows/trunk.yml
+++ b/.github/workflows/trunk.yml
@@ -2,11 +2,11 @@
 
 name: lint-check-by-trunk
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on pull request events but only for the "main" branch
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - 'main'
+    types: [synchronize, opened]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
