--- a/.gitignore
+++ b/.gitignore
@@ -130,8 +130,14 @@ dmypy.json
 
 # Trunk linter
 .trunk/out
+.trunk/external
+.trunk/logs
 
 # do not include coverage file
 pytest-coverage.txt
 
+#vs-code config
 .vscode
+
+#Mac os index files
+.DS_Store
