--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,6 @@ pytest-coverage.txt
 
 #Mac os index files
 .DS_Store
+notebooks/.vector_cache/wiki.en.vec
+notebooks/.vector_cache/wiki.en.vec.pt
+notebooks/~/
