disable prettier, it is a linter for js

--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -8,12 +8,12 @@ cli:
   version: 0.18.1-beta
 lint:
   disabled:
+    - prettier
     - markdownlint
     - gitleaks
   enabled:
     - actionlint@1.6.21
     - git-diff-check
-    - prettier@2.7.1
     - black@22.10.0
     - flake8@5.0.4
     - isort@5.10.1
