--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -21,5 +21,5 @@ lint:
       - flex/**/__init__.py
       - test/**/__init__.py
       - setup.py  
-      - torch_datasets/
+      - torch_datasets
       - notebooks/
