--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -13,9 +13,9 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Set up Python 3.8.10
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.8.10
+          python-version: "3.8.10"
 
       - name: Install dependencies
         run: |
