--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -1,20 +1,25 @@
 version: 0.1
 runtimes:
   enabled:
-    - python@3.10.3
+    - python@3.10.8
 cli: 
-  version: 1.10.0
+  version: 1.12.0
 lint:
   disabled:
     - prettier
     - markdownlint
     - gitleaks
+    - bandit@1.7.5
+    - checkov@2.3.321
+    - taplo@0.7.0
+    - trivy@0.43.1
+    - trufflehog@3.44.0
   enabled:
-    - ruff@0.0.265
+    - ruff@0.0.278
     - yamllint@1.32.0
-    - actionlint@1.6.24
+    - actionlint@1.6.25
     - git-diff-check
-    - black@23.3.0
+    - black@23.7.0
     - flake8@6.0.0
     - isort@5.12.0
   ignore:   
@@ -34,5 +39,5 @@ actions:
 plugins:
   sources:
     - id: trunk
-      ref: v0.0.17
+      ref: v0.0.21
       uri: https://github.com/trunk-io/plugins
