Revert "Minor changes"

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -37,4 +37,4 @@ python:
       path: .
       extra_requirements:
         - docs
-    - requirements: docs/requirements.txt
+#     - requirements: docs/requirements.txt
