--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -21,6 +21,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8 pytest pytest-cov
+          pip install protobuf
+          pip install --upgrade protobuf
           pip install ".[develop]"
 
       - name: Build coverage file
