--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -22,7 +22,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install flake8 pytest pytest-cov
           pip install protobuf
-          pip install --upgrade protobuf
+          pip install google-protobuf
           pip install ".[develop]"
 
       - name: Build coverage file
