--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -12,17 +12,15 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Python 3.8.10
-        uses: actions/setup-python@v4
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v5
         with:
-          python-version: 3.8.10
+          python-version: '3.9'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install flake8 pytest pytest-cov
-          pip install protobuf
-          pip install google-protobuf
           pip install ".[develop]"
 
       - name: Build coverage file
