--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -12,15 +12,16 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Python 3.9
-        uses: actions/setup-python@v5
+      - name: Set up Python 3.10.16
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
+          python-version: 3.10.16
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install flake8 pytest pytest-cov
+          pip install -r requirements_ci.txt
           pip install ".[develop]"
 
       - name: Build coverage file
