--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -12,6 +12,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+
       - name: Set up Python 3.10.16
         uses: actions/setup-python@v4
         with:
@@ -19,10 +22,10 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install flake8 pytest pytest-cov
-          pip install -r requirements_ci.txt
-          pip install ".[develop]"
+          uv pip install flake8 pytest pytest-cov
+          uv pip install ".[develop]"
+        env:
+          UV_SYSTEM_PYTHON: 1
 
       - name: Build coverage file
         run: |
